# vcon-server

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .env.local  .env.test  .env.test.example  .gitignore  .vcon-meta.yaml  Makefile  README.md  README_REDIS_CACHING.md  conftest.py  docker-compose.dev.yml  docker-compose.milvus.yml  docker-compose.postgres.yml  docker-compose.signoz.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  env.test.example  example_api_token.txt  example_config.yml  example_docker-compose.yml  example_prod_config.yml  install.sh  install_docker_and_conserver.sh  migrate_to_responses_api.sh  mkdocs.yml  nginx.conf  pyproject.toml  pytest.ini  redistest.py  setup_test_db.py  test_config.yml
.github/workflows/: docker-publish.yml  milvus-integration.yml  milvus.yml  run-tests.yml
.vcon-repo/: graph.json
api/: api.py  vcon_hook.py
api/middleware/: errors.py
api/services/: vcon_service.py
backup_20250526_190840/: analyze_and_label_init.py.bak  analyze_init.py.bak  analyze_vcon_init.py.bak  detect_engagement_init.py.bak
common/: config.py  exceptions.py  logging_dev.conf  redis_mgr.py  settings.py  vcon.py
common/lib/: agent_session_recorder.py  error_tracking.py  metrics.py  openai_client.py  queue.py  queue_metrics.py  redact.py  retry.py  vcon_compat.py  vcon_egress_compat.py  vcon_redis.py
common/storage/: base.py  test_base.py
common/tests/: test_api.py  test_api_branches.py  test_config_cache.py  test_config_null.py  test_dlq_move.py  test_encoding.py  test_exceptions.py  test_external_ingress.py  test_inflight_counter.py  test_invalid_vcon_pipeline.py  test_legacy_link_aliases.py  test_otel_fork_safe_init.py  test_parallel_processing.py  test_plugin_groups.py  test_post_vcon_expiry.py  test_queue_dlq_counter.py  test_queue_metrics.py  test_retry_redact.py  test_storage_contract.py  test_vcon_compat.py  test_vcon_egress_compat.py  test_vcon_redis_spec_enforce.py  test_vcon_service.py  test_worker_config.py  vcon_fixture.py
conserver/: after_link_hook.py  dlq.py  follower.py  hook.py  main.py
conserver/links/: README.md  base.py
conserver/tests/: conftest.py  test_base_link.py  test_link_metrics.py  test_vcon_concurrency.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.conserver  Dockerfile.conserver.slim  wait_for_redis.sh
docker/clickhouse/: keeper.xml
docs/: CLAUDE.md  EXTENDING.md  PERFORMANCE_TESTING.md  VECTOR_STORAGE.md  VFUN_CRASH_REPORT.md  VFUN_STRESS_TEST_REPORT.md  contributing.md  index.md  requirements.txt
docs/configuration/: authentication.md  chains-and-pipelines.md  egress-compatibility.md  environment-variables.md  index.md  workers.md  yaml-configuration.md
docs/examples/: example_link.py  example_storage.py
docs/extending/: creating-links.md  creating-storage-adapters.md  creating-tracers.md  dynamic-modules.md  index.md
docs/getting-started/: index.md  quick-start.md  requirements.md
docs/installation/: automated-script.md  docker.md  index.md  kubernetes.md  manual-installation.md  upgrading.md
docs/operations/: api-reference.md  backup-restore.md  dead-letter-queue.md  index.md  logging.md  monitoring.md  troubleshooting.md
docs/reference/: cli-reference.md  conserver-flow.md  index.md  vcon-data-model.md
docs/var/: 00-platform-architecture-guide.md  01-quick-start-guide.md  02-installation-guide.md  03-configuration-guide.md  04-administration-guide.md  05-troubleshooting-guide.md  06-upgrade-guide.md  07-release-notes.md
loadtest/: README.md  locustfile.py
prod_mgt/: 01_PRODUCT_OVERVIEW.md  02_CORE_FUNCTIONALITY.md  03_STORAGE_ADAPTERS.md  04_LINK_PROCESSORS.md  05_EXTERNAL_INTEGRATIONS.md  06_DEPLOYMENT_OPERATIONS.md  07_USE_CASES_EXAMPLES.md  08_API_REFERENCE.md  09_ARCHITECTURE_DESIGN.md  10_ROADMAP_FUTURE.md  README.md
scripts/: README.md  agent_session_smoke.py  find_bad_file.py  install_conserver.sh  load-test-milvus.py  monitor-milvus.sh  nas_stress_test.py  nas_transcription_pipeline.py  run_pipeline_with_restart.sh  test-milvus-comprehensive.sh  test-milvus.sh  test-postgres.sh  uninstall_conserver.sh
server/: README_CORE.md  api.py  config.py  conftest.py  follower.py  load_config.py  logging.conf  main.py  pytest.ini  redis_mgr.py  settings.py  vcon.py  version.py
server/lib/: ai_usage.py  context_utils.py  llm_client.py  metrics.py  openai_client.py  (+2 more)
server/links/hugging_face/: README.md  __init__.py  pyproject.toml
server/links/hugging_face/tests/: conftest.py
signoz/: README.md  alertmanager.yml  clickhouse-users.xml  otel-collector-config.yaml  zz-clickhouse-config.xml
tests/: README.md  conftest.py
(+301 files in other folders)
